--- a/index.html
+++ b/index.html
@@ -1,60 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Галерея BK</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container">
-      <h1 class="brand">Галерея BK</h1>
-      <p class="tagline">Проста мінімалістична документація / каталог</p>
+
+<header class="site-header">
+  <div class="container">
+    <h1 class="brand">Галерея BK</h1>
+    <p class="tagline">Перегляд, пошук, фільтри</p>
+  </div>
+</header>
+
+<div class="container main-grid">
+
+  <!-- LEFT COLUMN – FILTERS -->
+  <aside class="filters">
+    <div class="filter-block">
+      <h3>Тип БК</h3>
+      <div id="filter-type" class="filter-list"></div>
+      <button id="resetType" class="btn-ghost">Очистити типи</button>
     </div>
-  </header>
 
-  <main class="container main-grid" id="app">
-    <!-- Filters -->
-    <aside id="filters" class="filters">
-      <section class="filter-block">
-        <h3>Фільтр — Type</h3>
-        <div id="filter-type" class="filter-list"></div>
-        <button id="resetType" class="btn btn-ghost">Скинути Type</button>
-      </section>
+    <div class="filter-block">
+      <h3>Affiliation</h3>
+      <div id="filter-aff" class="filter-list"></div>
+      <button id="resetAff" class="btn-ghost">Очистити affiliation</button>
+    </div>
+  </aside>
 
-      <section class="filter-block">
-        <h3>Фільтр — Affiliation</h3>
-        <div id="filter-aff" class="filter-list"></div>
-        <button id="resetAff" class="btn btn-ghost">Скинути Affiliation</button>
-      </section>
-    </aside>
+  <!-- RIGHT COLUMN – GALLERY -->
+  <section class="gallery-section">
+    <div id="gallery" class="gallery"></div>
+    <div id="no-results" class="no-results" hidden>Нічого не знайдено.</div>
+  </section>
 
-    <!-- Gallery -->
-    <section id="gallery-section" class="gallery-section">
-      <div id="gallery" class="gallery" aria-live="polite"></div>
-      <div id="no-results" class="no-results" hidden>Нічого не знайдено.</div>
-    </section>
-  </main>
+</div>
 
-  <!-- Modal / Popup -->
-  <div id="overlay" class="overlay" hidden>
-    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-      <button id="closeModal" class="modal-close" aria-label="Закрити">&times;</button>
-      <div class="modal-body">
-        <h2 id="modalTitle"></h2>
-        <p class="meta"><strong>Type:</strong> <span id="modalType"></span> &nbsp; | &nbsp; <strong>Affiliation:</strong> <span id="modalAff"></span></p>
-        <p id="modalDesc" class="desc"></p>
-
-        <div id="mediaGallery" class="media-gallery"></div>
+<!-- MODAL -->
+<div id="overlay" class="overlay" hidden>
+  <div class="modal">
+    <button id="closeModal" class="modal-close">&times;</button>
+    <div class="modal-body">
+      <h2 id="modalTitle"></h2>
+      <div class="meta">
+        <strong>Тип:</strong> <span id="modalType"></span><br />
+        <strong>Affiliation:</strong> <span id="modalAff"></span>
       </div>
+      <p id="modalDesc" class="desc"></p>
+
+      <h3>Медіафайли:</h3>
+      <div id="mediaGallery" class="media-gallery"></div>
     </div>
   </div>
+</div>
 
-  <footer class="site-footer">
-    <div class="container">© Галерея BK — мінімалістична тема</div>
-  </footer>
+<script src="script.js"></script>
 
-  <script src="script.js" defer></script>
 </body>
 </html>
