--- a/fpv.html
+++ b/fpv.html
@@ -9,7 +9,7 @@
 <body class="page-category">
   <header class="topbar">
     <a class="back" href="index.html">На головну</a>
-    <h1>Бомбери</h1>
+    <h1>FPV</h1>
   </header>
 
   <main class="container">
