--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 
     <div class="grid-3">
       <a class="card big" href="rozvidka.html">
-        <h2>Розвідка</h2>
-        <p class="muted">(Mavic)</p>
+        <h2>Mavic/Autel</h2>
+        <p class="muted"></p>
       </a>
 
       <a class="card big" href="bombers.html">
         <h2>Бомбери</h2>
-        <p class="muted">(Heavy Shot, Nemesis, Vampire)</p>
+        <p class="muted"></p>
       </a>
 
       <a class="card big" href="fpv.html">
         <h2>FPV</h2>
-        <p class="muted">(радіо / оптоволокно)</p>
+        <p class="muted"></p>
       </a>
     </div>
   </main>
