--- a/rozvidka.html
+++ b/rozvidka.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Розвідка</title>
+  <title>Mavic/Autel</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="page-category">
   <header class="topbar">
     <a class="back" href="index.html">На головну</a>
-    <h1>Розвідка</h1>
+    <h1>Mavic/Autel</h1>
   </header>
 
   <main class="container">
