--- a/rozvidka.html
+++ b/rozvidka.html
@@ -8,7 +8,8 @@
 </head>
 <body class="page-category">
   <header class="topbar">
-    <a class="back" href="index.html">На головну</a>
+    <!--<a class="back" href="index.html">На головну</a>-->
+    <a class="back-icon" href="index.html" aria-label="Назад"></a>
     <h1>Mavic/Autel</h1>
   </header>
 
