--- a/bombers.html
+++ b/bombers.html
@@ -6,7 +6,7 @@
   <title>Бомбери</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="page-category">
+<body class="page-category" data-page="bombers">
   <header class="topbar">
     <!--<a class="back" href="index.html">На головну</a>-->
     <a class="back-icon" href="index.html" aria-label="Назад"></a>
