--- a/rozvidka.html
+++ b/rozvidka.html
@@ -8,6 +8,7 @@
 </head>
 <body class="page-category" data-page="rozvidka">
   <header class="topbar">
+    <!--<a class="back" href="index.html">На головну</a>-->
     <a class="back-icon" href="index.html" aria-label="Назад"></a>
     <h1>Mavic/Autel</h1>
   </header>
@@ -17,6 +18,7 @@
       <section class="panel">
         <h3>Фільтр по типу</h3>
         <div id="filters" class="filters">
+          <!-- чекбокси будуть згенеровані JS -->
           <p class="muted">Зачекайте — завантаження...</p>
         </div>
         <button id="clearFilters" class="btn small">Скинути</button>
@@ -24,7 +26,9 @@
     </aside>
 
     <section class="content">
-      <div id="gallery" class="gallery"></div>
+      <div id="gallery" class="gallery">
+        <!-- картки будуть виводитись сюди -->
+      </div>
     </section>
   </main>
 
